--- a/src/components/widgets/_FooterORI.astro
+++ b/src/components/widgets/_FooterORI.astro
@@ -26,21 +26,19 @@ export interface Props {
 const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme = 'light' } = Astro.props;
 ---
 
-<div id="footer_art" class="grid grid-flow-col auto-cols-max content-center">&nbsp;</div>
-<div id="footer_grass"> &nbsp; </div>
-<footer class:list={[{ dark: theme === 'dark' }, 'relative not-prose fond-pied']}>
-  <div class="fond-pied dark:font-pied absolute inset-0 pointer-events-none" aria-hidden="true"></div>
+<footer class:list={[{ dark: theme === 'dark' }, 'relative border-t border-gray-200 dark:border-slate-800 not-prose']}>
+  <div class="dark:bg-dark absolute inset-0 pointer-events-none" aria-hidden="true"></div>
   <div class="relative max-w-7xl mx-auto px-4 sm:px-6 dark:text-slate-300">
-      <div class="grid grid-cols-12 gap-4 gap-y-8 sm:gap-8 py-8 md:py-12">
+    <div class="grid grid-cols-12 gap-4 gap-y-8 sm:gap-8 py-8 md:py-12">
       <div class="col-span-12 lg:col-span-4">
         <div class="mb-2">
-          <a class="inline-block font-bold text-xl text-neutral-950 dark:text-neutral-950" href={getHomePermalink()}>{SITE?.name}</a>
+          <a class="inline-block font-bold text-xl" href={getHomePermalink()}>{SITE?.name}</a>
         </div>
         <div class="text-sm text-muted">
           {
             secondaryLinks.map(({ text, href }) => (
               <a
-                class="text-neutral-800 hover:text-neutral-800 dark:text-neutral-800 hover:underline transition duration-150 ease-in-out mr-2 rtl:mr-0 rtl:ml-2"
+                class="text-muted hover:text-gray-700 dark:text-gray-400 hover:underline transition duration-150 ease-in-out mr-2 rtl:mr-0 rtl:ml-2"
                 href={href}
                 set:html={text}
               />
@@ -51,13 +49,13 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
       {
         links.map(({ title, links }) => (
           <div class="col-span-6 md:col-span-3 lg:col-span-2">
-            <div class="text-lime-400 dark:text-lime-400 font-medium mb-2">{title}</div>
+            <div class="dark:text-gray-300 font-medium mb-2">{title}</div>
             {links && Array.isArray(links) && links.length > 0 && (
               <ul class="text-sm">
                 {links.map(({ text, href, ariaLabel }) => (
                   <li class="mb-2">
                     <a
-                      class="text-yellow-300 hover:underline dark:text-yellow-300 transition duration-150 ease-in-out"
+                      class="text-muted hover:text-gray-700 hover:underline dark:text-gray-400 transition duration-150 ease-in-out"
                       href={href}
                       aria-label={ariaLabel}
                     >
@@ -78,7 +76,7 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
             {socialLinks.map(({ ariaLabel, href, text, icon }) => (
               <li>
                 <a
-                  class="text-neutral-800 dark:text-neutral-800 hover:bg-gray-100 dark:hover:bg-gray-100 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 inline-flex items-center"
+                  class="text-muted dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 inline-flex items-center"
                   aria-label={ariaLabel}
                   href={href}
                 >
@@ -92,43 +90,10 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
           ''
         )
       }
-      <div class="text-sm mr-4 text-gray-300">
+
+      <div class="text-sm mr-4 dark:text-slate-400">
         <Fragment set:html={footNote} />
       </div>
     </div>
   </div>
 </footer>
-
-<style>
-#footer_grass {
-    background: url('grass.png') top center repeat-x;
-    /* height: 39px; */
-    margin-top: -39px;
-	background-position: center;
-}
-#footer_art {
-	background-image: url('footer-art.png');
-	background-repeat: no-repeat;
-	height: 180px;
-	background-position: center;
-  margin-bottom: 0px;
-}
-
-.fond-pied {
-	background-color: #898989;
-}
-
-.clearfix {
-  display: block;
-}
-.clearfix::after {
-  clear: both;
-  content: ' ';
-  display: block;
-  font-size: 0;
-  line-height: 0;
-  visibility: hidden;
-  width: 0;
-  height: 0;
-}
-</style>
