Updated Footer and Navigation after merge fetch upstream
1 - changed footnote fragment div
from dark:text-muted
to dark:text-gray-950
2 - updated footNote

--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -93,7 +93,7 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
         )
       }
 
-      <div class="text-sm mr-4 dark:text-muted">
+      <div class="text-sm mr-4 dark:text-gray-950">
         <Fragment set:html={footNote} />
       </div>
     </div>
