Added using Icon from srv/assets/icons
astro.config.mjs updated

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import BlogLatestPosts from '~/components/widgets/BlogLatestPosts.astro';
 import FAQs from '~/components/widgets/FAQs.astro';
 import Stats from '~/components/widgets/Stats.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
+import { Icon } from 'astro-icon/components';
 
 const metadata = {
   title: 'Olivier Nuber — Photographe & Vidéaste - Bienvenue !',
@@ -396,4 +397,5 @@ const metadata = {
       waste more time! :P
     </Fragment>
   </CallToAction>
+  <div class="flex flex-row-reverse max-w-6xl mx-auto"><a href="#"><Icon name="tabler--arrow-bar-up" /></a></div><br>
 </Layout>
