--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -1,5 +1,6 @@
 ---
-import '@fontsource-variable/inter';
+//import '@fontsource-variable/inter';
+import '@fontsource-variable/josefin-sans';
 
 // 'DM Sans'
 // Nunito
@@ -21,13 +22,15 @@ import '@fontsource-variable/inter';
 
 <style is:inline is:global>
   :root {
-    --aw-font-sans: 'Inter Variable';
+    /* --aw-font-sans: 'Inter Variable'; */
+    --aw-font-sans: 'josefin-sans';
     --aw-font-serif: var(--aw-font-sans);
     --aw-font-heading: var(--aw-font-sans);
 
-    --aw-color-primary: rgb(1 97 239);
-    --aw-color-secondary: rgb(1 84 207);
-    --aw-color-accent: rgb(109 40 217);
+    --aw-color-primary: rgb(176 116 24);
+    --aw-color-secondary: rgb(203 161 53);
+    --aw-color-accent: rgb(130 26 26);
+    --aw-color-info: rgb(51 51 51);
 
     --aw-color-text-heading: rgb(0 0 0); 
     --aw-color-text-default: rgb(16 16 16);
@@ -42,13 +45,15 @@ import '@fontsource-variable/inter';
   }
 
   .dark {
-    --aw-font-sans: 'Inter Variable';
+    /* --aw-font-sans: 'Inter Variable'; */
+    --aw-font-sans: 'josefin-sans';
     --aw-font-serif: var(--aw-font-sans);
     --aw-font-heading: var(--aw-font-sans);
 
-    --aw-color-primary: rgb(1 97 239);
-    --aw-color-secondary: rgb(1 84 207);
-    --aw-color-accent: rgb(109 40 217);
+    --aw-color-primary: rgb(176 116 24);
+    --aw-color-secondary: rgb(203 161 53);
+    --aw-color-accent: rgb(130 26 26);
+    --aw-color-info: rgb(51 51 51);
 
     --aw-color-text-heading: rgb(0 0 0); 
     --aw-color-text-default: rgb(229 236 246);
