--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -49,6 +49,9 @@ const { language, textDirection } = I18N;
       img {
         content-visibility: auto;
       }
+      body * {
+        @apply transition-colors duration-1000;
+      }
     </style>
   </body>
 </html>
