--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -23,7 +23,7 @@ const metadata = {
   >
     <Fragment slot="title">
       Elevate your online presence with our <br />
-      <span class="text-accent dark:text-white highlight"> Beautiful Website Templates</span>
+      <span class="text-primary dark:text-secondary highlight"> Beautiful Website Templates</span>
     </Fragment>
 
     <Fragment slot="subtitle">
