--- a/src/components/ui/ContactForm.astro
+++ b/src/components/ui/ContactForm.astro
@@ -5,11 +5,11 @@ import Button from '~/components/ui/Button.astro';
 const { inputs, textarea, disclaimer, button = 'Contactez-moi maintenant !', description = '' } = Astro.props as Form;
 ---
 
-<form method="post" action="/send-email.php">
+<form method="post" action="/sendmail.php" name="contactform">
   {
     inputs &&
       inputs.map(
-        ({ type = 'text', name, label = '', autocomplete = 'on', placeholder = 'Votre prénom et nom' }) =>
+        ({ type = 'text', name, label = '', autocomplete = 'on', placeholder = '' }) =>
           name && (
             <div class="mb-6">
               {label && (
@@ -40,7 +40,7 @@ const { inputs, textarea, disclaimer, button = 'Contactez-moi maintenant !', des
           id="textarea"
           name="textarea"
           rows={textarea.rows ? textarea.rows : 4}
-          placeholder="Votre message ..."
+          placeholder=""
           class="py-3 px-4 block w-full text-md rounded-lg border border-gray-200 dark:border-gray-700 bg-gray-50 dark:bg-gray-800"
         />
       </div>
@@ -50,14 +50,7 @@ const { inputs, textarea, disclaimer, button = 'Contactez-moi maintenant !', des
   {
     disclaimer && (
       <div class="mt-3 flex items-start">
-        <div class="flex mt-0.5">
-          <input
-            id="disclaimer"
-            name="disclaimer"
-            type="checkbox"
-            class="cursor-pointer mt-1 py-3 px-4 block text-md rounded-lg border border-gray-200 dark:border-gray-700 bg-white dark:bg-slate-900"
-          />
-        </div>
+
         <div class="ml-3">
           <label for="disclaimer" class="cursor-pointer select-none text-sm text-gray-600 dark:text-gray-400">
             {disclaimer.label}
@@ -83,3 +76,5 @@ const { inputs, textarea, disclaimer, button = 'Contactez-moi maintenant !', des
     )
   }
 </form>
+
+
