--- a/src/components/widgets/ContactForm.astro
+++ b/src/components/widgets/ContactForm.astro
@@ -1,5 +1,5 @@
 ---
-import FormContainer from '~/components/ui/Form.astro';
+import FormContainer from '~/components/ui/ContactForm.astro';
 import Headline from '~/components/ui/Headline.astro';
 import WidgetWrapper from '~/components/ui/WidgetWrapperContact.astro';
 import type { Contact } from '~/types';
