Added contact form legal

--- a/src/components/ui/ContactForm.astro
+++ b/src/components/ui/ContactForm.astro
@@ -72,6 +72,8 @@ const { inputs, textarea, disclaimer, button = 'Contactez-moi maintenant !', des
     description && (
       <div class="mt-3 text-center">
         <p class="text-sm text-gray-600 dark:text-gray-400">{description}</p>
+        <br>
+        <p class="text-xs italic text-justify text-gray-600 dark:text-gray-400">(*) Les données recueillies ne sont en aucun cas communiquées à des tiers, à l’exception des autorités publiques françaises ou étrangères dûment habilitées. Ces données ne sont ni vendues, ni échangées, ni cédées, ni louées, à titre gratuit ou onéreux, à des tiers et ne font l’objet d’aucune exploitation commerciale.</p>
       </div>
     )
   }
