--- a/src/pages/contactform.astro
+++ b/src/pages/contactform.astro
@@ -34,7 +34,7 @@ const metadata = {
     }}
     disclaimer={{
       label:
-        ' En soumettant ce formulaire de contact, vous reconnaissez et acceptez la collecte de vos informations personnelles.',
+        ' En soumettant ce formulaire de contact, vous reconnaissez et acceptez la collecte de vos informations personnelles (*).',
     }}
     description="A très bientôt."
   />
